加注册、登录链接

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -27,8 +27,8 @@
 <header class="hjc_header" style="text-align:left;">
     <a href="javascript:;" class="hjc_logo" style="margin-left: 10px;"><img src="/images/03.png"></a>
     <div class="hjc_hdDZ">
-    	<a href="javascript:;">登录</a>
-    	<a href="javascript:;">注册</a>
+    	<a href="/Home/Login">登录</a>
+    	<a href="/Home/Register">注册</a>
     </div>
 </header>
 
