--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -14,7 +14,7 @@
 
     <header class="hjc_header">
         <a href="javascript:;" class="hjc_logo">个人中心</a>
-        <a href="javascript:;" class="hjc_Set"></a>
+        <a href="/Personal/Set" class="hjc_Set"></a>
     </header>
 
     <div class="Personal_header">
