--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/ModifyPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/ModifyPassword.cshtml
@@ -68,7 +68,7 @@
 <body style="background:#F4F4F5;">
 
     <header class="hjc_header">
-        <a href="javascript:;" class="hjc_back"></a>
+        <a href="/Personal/Set" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">修改密码</a>
     </header>
 
