--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetAutograph.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetAutograph.cshtml
@@ -1,31 +1,30 @@
 ﻿@model C8.Lottery.Model.UserInfo
 @{
-    ViewBag.Title = "SetNickName";
+    ViewBag.Title = "SetAutograph";
 }
 
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>个人中心-设置-设置昵称</title>
+    <title>个人中心-设置-设置签名</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
 
     <script src="~/js/jquery-1.8.3.min.js"></script>
     <link href="~/css/dialog.css" rel="stylesheet" />
     <script src="~/js/dialog.min.js"></script>
     <script src="~/js/yjp.js"></script>
-
     <script>
         $(function () {
-         
+
             set();
         });
 
         function set()
         {
             $("#btnsub").click(function () {
-                var name = $("#name").val();
-                $.post('/Personal/EditUser', { value: name, type: 1 }, function (data) {
+                var autograph = $("#autograph").val();
+                $.post('/Personal/EditUser', { value: autograph, type: 2 }, function (data) {
                     if (data.Success != true) {
                         alertmsg(data.Msg);
                     } else {
@@ -33,7 +32,7 @@
                     }
                 });
             });
-          
+
         }
 
     </script>
@@ -43,12 +42,12 @@
 
     <header class="hjc_header">
         <a href="/Personal/Set" class="hjc_back"></a>
-        <a href="javascript:;" class="hjc_logo">设置昵称</a>
+        <a href="javascript:;" class="hjc_logo">设置签名</a>
     </header>
 
     <div class="Set_Box">
         <ul class="Set_Bul1">
-            <li><input type="text" id="name" value="@Model.Name" class="Bul1_iptA"><i class="Bul1_del"></i></li>
+            <li><input type="text" id="autograph" value="@Model.Autograph" class="Bul1_iptA"><i class="Bul1_del"></i></li>
         </ul>
     </div>
     <div class="DL_info2">
@@ -57,3 +56,4 @@
 
 </body>
 </html>
+
