--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿@using C8.Lottery.Model
+@using C8.Lottery.Public
 @{
     Layout = null;
 
-    
-    
+
+
 }
 
 <!DOCTYPE html>
@@ -27,8 +28,28 @@
 <header class="hjc_header" style="text-align:left;">
     <a href="javascript:;" class="hjc_logo" style="margin-left: 10px;"><img src="/images/03.png"></a>
     <div class="hjc_hdDZ">
-    	<a href="/Home/Login">登录</a>
-    	<a href="/Home/Register">注册</a>
+        @if (Request["sessionId"] != null)
+        {
+            string sessionId = Convert.ToString(Request["sessionId"]);
+            UserInfo user = MemClientFactory.GetCache<UserInfo>(sessionId);
+            if (user != null)
+            {
+                <a href="/Personal/Index">Hi,@user.Name</a>
+                <a href="/Personal/logOut">退出</a>
+            }
+            else
+            {
+                <a href="/Home/Login">登录</a>
+                <a href="/Home/Register">注册</a>
+            }
+        }
+        else
+        {
+            <a href="/Home/Login">登录</a>
+            <a href="/Home/Register">注册</a>
+        }
+    
+
     </div>
 </header>
 
