--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model   C8.Lottery.Model.UserInfo
+@{
     ViewBag.Title = "Index";
 }
 
@@ -19,18 +20,39 @@
 
     <div class="Personal_header">
         <div class="Personal_hdInfo1">
-            <div class="Per_hdIf1Logo f-l"><a href="javascript:;"><img src="~/images/36.png"></a></div>
+            <div class="Per_hdIf1Logo f-l"><a href="javascript:;">
+                                               @if (string.IsNullOrEmpty(Model.Headpath))
+                                               {
+                                                   <img src="~/images/default_avater.png">
+                                               }
+                                               else
+                                               {
+                                                   <img src="@Model.Headpath">
+                                               }
+
+            </div>
             <a href="javascript:;" class="Per_hdIf1A f-r"><span>充值</span></a>
             <div class="Per_hdIf1con">
                 <div class="hdIf1cTop">
-                    <h3 class="If1T_name f-l"><a href="javascript:;">一只安静的哈士奇</a></h3>
+                    <h3 class="If1T_name f-l"><a href="javascript:;">@Model.Name</a></h3>
                     <div class="If1T_nature f-l">
-                        <img src="~/~/images/37_1.png" class="nature_tu nature_tNan">
+                       @if (Model.Sex == 0)
+                       {
+
+                        <img src="~/images/37_1.png" class="nature_tu nature_tNan">
+                       }
+                       else
+                       {
+                        <img src="~/images/37_2.png" class="nature_tu nature_tNan">
+                       }
+
+                        
+
                     </div>
                     <div style="clear:both;"></div>
                 </div>
                 <div class="hdIf1cBt">
-                    <p>这里是个人签名</p>
+                    <p>@Model.Autograph</p>
                 </div>
             </div>
         </div>
@@ -38,25 +60,25 @@
             <ul class="Per_If2Ul">
                 <li>
                     <a href="javascript:;">
-                        <h3>100</h3>
+                        <h3>@Model.Coin</h3>
                         <p>金币</p>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;">
-                        <h3>956</h3>
+                        <h3>@Model.Integral</h3>
                         <p>积分</p>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;">
-                        <h3>20</h3>
+                        <h3>@Model.Follow</h3>
                         <p>关注</p>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;">
-                        <h3>10000</h3>
+                        <h3>@Model.Fans</h3>
                         <p>粉丝</p>
                     </a>
                 </li>
@@ -68,7 +90,7 @@
     <div class="Personal_list">
         <ul class="Per_listUl">
             <li>
-                <a href="javascript:;">
+                <a href="/Personal/Task">
                     <div class="Per_listtu f-l"><img src="~/images/39_9.png"></div>
                     <div class="Per_listRight">
                         <h3>赚钱任务</h3>
