--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
@@ -4,7 +4,10 @@
 <div class="Gues_comment">
     <div class="Gues_comTitle" style="margin: 0 -.625rem;padding: 0 .625rem;">
         <h3>精彩评论</h3>
-        <a href="/News/CommentList/@ViewBag.ArticleId">更多评论>></a>
+        @if (Model.Count >= 3)
+        {
+            <a href="/News/CommentList/@ViewBag.ArticleId">更多评论>></a>
+        }
         <div style="clear:both;"></div>
     </div>
     <div class="Gues_Cbox" id="Gues1" style="padding-bottom: 49px;">
@@ -40,12 +43,12 @@
                             <a href="javascript::" class="comp_DZ">
                                 @if (comment.CurrentUserLikes > 0)
                                 {
-                                    <i class="on"><img src="/images/46_1.png" class="DZ_tu1"><img src="/images/46_2.png" class="DZ_tu2"></i>
+                                    <i class="on" data-id="@comment.Id" data-ctype="2" data-commenttype="@comment.Type"><img src="/images/46_1.png" class="DZ_tu1"><img src="/images/46_2.png" class="DZ_tu2"></i>
 
                                 }
                                 else
                                 {
-                                    <i><img src="/images/46_1.png" class="DZ_tu1"><img src="/images/46_2.png" class="DZ_tu2"></i>
+                                    <i data-id="@comment.Id" data-ctype="1" data-commenttype="@comment.Type"><img src="/images/46_1.png" class="DZ_tu1"><img src="/images/46_2.png" class="DZ_tu2"></i>
 
                                 }
                                 @if (comment.StarCount > 0)
