--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
@@ -173,7 +173,7 @@
                 } else {
                     li += '<i data-id="' + value.Id + '" data-ctype="1" data-commenttype="' +value.Type+ '"><img src="/images/46_1.png" class="DZ_tu1"><img src="/images/46_2.png" class="DZ_tu2"></i>';
                 }
-                li+=+ '<span>' + ( value.StarCount > 0 ?value.StarCount:'')+'</span>'
+                li+= '<span>' + ( value.StarCount > 0 ?value.StarCount:'')+'</span>'
                     + '</a>'
                     + '<a href="/Comment/Index/'+value.Id+'?ctype=2&type='+ctype+'" class="comp_HF"><img src="/images/46_3.png"></a>'
                     + '</div>'
