--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -17,9 +17,11 @@
     <title>@Model.FullHead -万彩吧</title>
     <meta name="keywords" content="@lottery.SeoKeyword">
     <meta name="description" content="@lottery.SeoDescription">
+    <link href="~/css/jquery.emoji.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     <link rel="stylesheet" type="text/css" href="~/css/c8-icon.css" />
     <script type="text/javascript" src="~/js/jquery-1.8.3.min.js"></script>
+    <script src="~/js/luo/jquery.emoji.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
 </head>
 
@@ -434,6 +436,11 @@
         </div>
     </div>
 
+<script type="text/javascript">
+    $(function() {
+        $(".Gues_ul").parseEmoji();
+    });
+</script>
 </body>
 
 </html>
