--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -71,13 +71,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="javascript:;">
+                    <a href="/Personal/Follow">
                         <h3>@Model.Follow</h3>
                         <p>关注</p>
                     </a>
                 </li>
                 <li>
-                    <a href="javascript:;">
+                    <a href="/Personal/Fans">
                         <h3>@Model.Fans</h3>
                         <p>粉丝</p>
                     </a>
