修改登录缓存Id

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -97,8 +97,8 @@
 </div>
 
 
-    <div class="hjc_indexmain">
-        <ul class="ind_mainUl2">
+    <div class="hjc_indexmain" style="margin-top: 283px;">
+        <ul class="ind_mainUl2" style="border-top: 5px solid #f3f4f4;">
             <!--时时彩-->
             
             @foreach (LotteryRecord record in ViewBag.openList)
