--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -8097,6 +8097,141 @@ footer {
 }
 /*** 发表评论 结束**/
 
+/*** 邀请注册 **/
+
+.Invitation_Box {
+    position: relative;
+    top: 50px;
+}
+
+.invitation-banner {
+    background: url(../images/invite.jpg);
+    background-size: 100%;
+    height: 326px;
+}
+
+.invitation-wapper {}
+
+.invitation-wapper .invitation-box {
+    margin: -62px 10.5px 0 10.5px;
+    box-shadow: 0px 5px 6px #ccc;
+    height: 264.5px;
+    background: #fff;
+    border-radius: 10px;
+    padding-top: 11.5px;
+}
+
+.invitation-wapper .invitation-box .invitation-text1,
+.invitation-wapper .invitation-box .invitation-text2 {
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.invitation-wapper .invitation-box .invitation-text1 {
+    font-size: 12px;
+    color: #666;
+    padding: 0 10px;
+    margin: 5.5px 0 5px 0;
+}
+
+.invitation-wapper .invitation-box .invitation-text2 {
+    font-size: 18px;
+    color: #f13031;
+    padding: 0 14.5px;
+    line-height: 30px;
+}
+
+.invitation-wapper .invitation-box .invitation-text2 a {
+    color: #f13031;
+}
+
+.invitation-wapper .invitation-statistics {
+    margin: 28.5px 11.5px 31px 11.5px;
+    font-size: 15px;
+}
+
+.invitation-wapper .invitation-statistics {
+    margin: 28.5px 11.5px 31px 11.5px;
+    font-size: 15px;
+}
+
+.invitation-wapper .invitation-statistics p {
+    margin-top: 5px;
+}
+
+.invitation-wapper .invitation-statistics .invitation-count-box {
+    float: left;
+    width: 40%;
+    text-align: center;
+}
+
+.invitation-wapper .invitation-statistics .invitation-commision-box {
+    float: right;
+    margin-left: 5px;
+    width: calc( 60% - 5px);
+    text-align: center;
+}
+
+.invitation-wapper .invitation-statistics .invitation-count-box span,
+.invitation-wapper .invitation-statistics .invitation-commision-box span {
+    color: #f13031;
+}
+
+.invitation-share {
+    margin-top: 10px;
+}
+
+.invitation-share dd {
+    width: 33.33333%;
+    box-sizing: border-box;
+    float: left;
+    text-align: center;
+    font-size: 13px;
+    line-height: 30px;
+}
+
+.invitation-share dd img {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+}
+
+.invitation-illustration-title {
+    color: #f13031;
+    font-size: 15px;
+    margin: 15px 0;
+    text-align: center;
+}
+
+.invitation-illustration {
+    height: 230.5px;
+    margin: 0 12px;
+}
+
+.invitation-illustration img {
+    width: 100%;
+    height: auto;
+}
+
+.invitation-desc {
+    padding: 0 13px;
+}
+
+.invitation-desc h2 {
+    color: #333;
+    font-size: 15px;
+    line-height: 30px;
+}
+
+.invitation-desc p {
+    font-size: 12px;
+    color: #666;
+    line-height: 30px;
+}
+
+
+/*** 邀请注册 结束**/
 /**兼容小屏**/
 
 @media screen and (max-width:320px) {
@@ -8136,6 +8271,9 @@ footer {
     }
     .points_JFfont {
         margin-top: 10px;
+    }
+ .invitation-banner {
+        height: 280px;
     }
 }
 
