--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -161,6 +161,16 @@
                     </div>
                 </a>
             </li>
+            <li>
+                <a href="javascript:;">
+                    <div class="Per_listtu f-l"><img src="~/images/40_8.png"></div>
+                    <div class="Per_listRight">
+                        <h3>邀请注册</h3>
+                        <i></i>
+                        <div style="clear:both;"></div>
+                    </div>
+                </a>
+            </li>
         </ul>
     </div>
 
