更改字符串格式化

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -162,7 +162,7 @@
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="/Personal/InvitationReg">
                     <div class="Per_listtu f-l"><img src="~/images/40_8.png"></div>
                     <div class="Per_listRight">
                         <h3>邀请注册</h3>
