--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Index";
 }
-
+<!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -20,15 +20,17 @@
 
     <div class="Personal_header">
         <div class="Personal_hdInfo1">
-            <div class="Per_hdIf1Logo f-l"><a href="javascript:;">
-                                               @if (string.IsNullOrEmpty(Model.Headpath))
-                                               {
-                                                   <img src="~/images/default_avater.png">
-                                               }
-                                               else
-                                               {
-                                                   <img src="@Model.Headpath">
-                                               }
+            <div class="Per_hdIf1Logo f-l">
+                <a href="javascript:;">
+                    @if (string.IsNullOrEmpty(Model.Headpath))
+                    {
+                        <img src="~/images/default_avater.png">
+                    }
+                    else
+                    {
+                        <img src="@Model.Headpath">
+                    }
+                </a>
 
             </div>
             <a href="javascript:;" class="Per_hdIf1A f-r"><span>充值</span></a>
@@ -36,17 +38,17 @@
                 <div class="hdIf1cTop">
                     <h3 class="If1T_name f-l"><a href="javascript:;">@Model.Name</a></h3>
                     <div class="If1T_nature f-l">
-                       @if (Model.Sex == 0)
-                       {
+                        @if (Model.Sex == 0)
+                        {
 
-                        <img src="~/images/37_1.png" class="nature_tu nature_tNan">
-                       }
-                       else
-                       {
-                        <img src="~/images/37_2.png" class="nature_tu nature_tNan">
-                       }
+                            <img src="~/images/37_1.png" class="nature_tu nature_tNan">
+                        }
+                        else
+                        {
+                            <img src="~/images/37_2.png" class="nature_tu nature_tNan">
+                        }
 
-                        
+
 
                     </div>
                     <div style="clear:both;"></div>
@@ -90,6 +92,7 @@
     <div class="Personal_list">
         <ul class="Per_listUl">
             <li>
+
                 <a href="/Personal/Task">
                     <div class="Per_listtu f-l"><img src="~/images/39_9.png"></div>
                     <div class="Per_listRight">
@@ -182,7 +185,7 @@
                         <img src="~/images/34_1a.png" class="per_bT1 per_bT1a">
                         <img src="~/images/34_1b.png" class="per_bT1 per_bT1b">
                     </div>
-                 <p>首页</p>
+                    <p>首页</p>
                 </a>
             </li>
             <li>
